k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reapers-smokehouse-service
  labels:
    app: reapers-smokehouse
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: reapers-smokehouse
